data folder added to gitignore

--- a/mathias/ass1_notebook.ipynb
+++ b/mathias/ass1_notebook.ipynb
@@ -194,6 +194,22 @@
     "PAT =  r\"\"\"\\p{L}|\\s\"\"\"\n",
     "new_txt = re.findall(PAT, txt)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bpe_train_tokenizer(input_path:str, vocab_size:int, special_tokens: list[str])-> tuple[dict[int, bytes],list[tuple[bytes, bytes]]] :\n",
+    "    \"\"\"\n",
+    "    returns:\n",
+    "        - vocab Dict[int, bytes]: The tokenizer vocabulary, a mapping from a int (token ID in the vocabulary) to bytes (token bytes)\n",
+    "        - merges List[Tuple[bytes, bytes]]: A list of BPE merges produced from training. Each list item is a tuple of bytes (<token1>, <token2>),\n",
+    "            where <token1> and <token2> are the tokens that were merged. The merges should be ordered by order of creation\n",
+    "    \n",
+    "    \"\"\""
+   ]
   }
  ],
  "metadata": {
